--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
   </head>
   <body>
     <section class="main">
+      <div class="block">
       <div class="cadre">
           <h1 class="rotateIn">404</h1>
           <p>Not Found !</p>
       </div>
           <p>Il n'y a rien à voir ici !</p>
           <a href="https://github.com/Ludgil">Home Page</a>
+        </div>
     </section>
   </body>
 </html>
