--- a/index.html
+++ b/index.html
@@ -3,21 +3,21 @@
   <head>
     <meta charset="utf-8">
     <title>404 Not found !</title>
-    <link rel="stylesheet" href="normalize.css">
-    <link rel="stylesheet" href="animate.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/assets/css/normalize.css">
+    <link rel="stylesheet" href="/assets/css/animate.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Mansalva&display=swap" rel="stylesheet">
 
   </head>
   <body>
     <section class="main">
       <div class="block">
-      <div class="cadre">
+        <div class="cadre">
           <h1 class="rotateIn">404</h1>
           <p>Not Found !</p>
-      </div>
-          <p>Il n'y a rien à voir ici !</p>
-          <a href="https://github.com/Ludgil">Home Page</a>
+        </div>
+        <p>Il n'y a rien à voir ici !</p>
+        <a href="https://github.com/Ludgil">Home Page</a>
         </div>
     </section>
   </body>
